--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Mayank's Portfolio</h1>
         <h2>I'm a Web Developer</h2>
         <hr/>
-        <h3><a href="./public/Anime-ranking.html>Anime Ranking Project"></a></h3>
+        <h3><a href="./public/Anime-ranking.html>Anime Ranking Project">Anime Ranking Project</a></h3>
         <img src="./assets/images/anime-ranking.png" height="200" alt="anime ranking project preview"/>
         <h3><a href="./public/birthday_invite.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/Bbirthday-invite.png" height="200" alt="birthday invite project review"/>
